--- a/css/student.css
+++ b/css/student.css
@@ -3,8 +3,11 @@
     margin-bottom: 10px;
     padding-bottom: 10px;
 }
+.info:last-of-type {
+    border-bottom: 1px solid #e1e1e1;
+}
 .leftLabel {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     color: #487eb3;
     display: inline-block;
@@ -14,4 +17,13 @@
     font-size: 16px;
     padding: 5px;
     display: inline-block;
+}
+.changeButton {
+    margin-left: 7px;
+    padding: 5px;
+}
+.saveButton {
+    padding: 7px;
+    font-size: 16px;
+    margin-top: 10px;
 }
