--- a/css/main.css
+++ b/css/main.css
@@ -32,3 +32,18 @@ html,body {
 a {
  text-decoration: none;
 }
+.userMenu{
+    float: left;
+    border-left: 1px solid #8e8e8e;
+    margin-right: 10px;
+}
+.userMenu > a{
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 10px;
+}
+.userMenu > a.subMenu{
+    padding: 5px;
+    margin-left: 25px;
+}
