--- a/css/auth.css
+++ b/css/auth.css
@@ -4,14 +4,14 @@ body {
     background-repeat: no-repeat;
     background-position: right bottom;
 }
-.outer:before {
+.out:before {
     content: '';
     display: inline-block;
     height: 100%;
     vertical-align: middle;
 }
 
-.outer {
+.out {
     text-align: center;
 }
 .auth_block {
@@ -24,6 +24,8 @@ body {
     border: 1px solid #8e8e8e;
     border-radius: 5px;
     text-align: center;
+    box-shadow: 0px 0px 15px 0px #8e8e8e;
+
 }
 .authInput {
     font-size: 16px;
