--- a/css/head.css
+++ b/css/head.css
@@ -1,19 +1,22 @@
 .head {
+    position: fixed;
+    top: 0;
     margin: 0;
+    min-width: 1000px;
     width: 100%;
     background-color: #80aaff;
     border-bottom: 1px solid #8e8e8e;
     overflow: hidden;
     border-bottom: 1px solid #8e8e8e;
-    background: linear-gradient(to left, #80aaff, #a3d3ff);
+    background: linear-gradient(to top, #80aaff, #a3d3ff);
     box-shadow: 0px 1px 50px 0px #8e8e8e;
 }
 .leftMenu {
     float: left;
     margin: 20px;
-    color: #000000;
+    color: #FFFFFF;
     cursor: default;
-    font-weight: bold;
+    font-size: 16px;
 }
 .rightMenu {
     float: right;
