--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html,body {
     width: 100%;
-    min-height: 100%;
     padding: 0;
     margin: 0;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -33,17 +32,28 @@ a {
  text-decoration: none;
 }
 .userMenu{
+    position: fixed;
     float: left;
-    border-left: 1px solid #8e8e8e;
-    margin-right: 10px;
+    width: 20%;
 }
 .userMenu > a{
     text-decoration: none;
+    margin: 15px;
     color: black;
     display: block;
-    padding: 10px;
+}
+.userMenu a:hover {
+    color: #3547c3;
 }
 .userMenu > a.subMenu{
-    padding: 5px;
-    margin-left: 25px;
+    margin-left: 30px;
+}
+.content {
+    width: 79%;
+    float: left;
+    margin-left: 20%;
+}
+.outer {
+    margin-top: 90px;
+
 }
