--- a/css/student.css
+++ b/css/student.css
@@ -3,8 +3,8 @@
     margin-bottom: 10px;
     padding-bottom: 10px;
 }
-.info:last-of-type {
-    border-bottom: 1px solid #e1e1e1;
+.last {
+    border-bottom: 1px solid #dadada;
 }
 .leftLabel {
     font-size: 16px;
@@ -26,4 +26,25 @@
     padding: 7px;
     font-size: 16px;
     margin-top: 10px;
+}
+.individualTrack {
+    margin-top: 50px;
+}
+.headTrack {
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;
+    color: #487eb3;
+}
+.trackTable {
+    margin-top: 30px;
+    border-collapse: collapse;
+    border: 1px solid #b2b2b2;
+}
+.trackTable td{
+    padding: 25px;
+    cursor: default;
+}
+.trackTable td:hover {
+    opacity: 0.8;
 }
