--- a/css/student_list.css
+++ b/css/student_list.css
@@ -31,6 +31,11 @@
 .studentList td img:hover {
     background-color: #eeeeff;
 }
+#error {
+    height: 1em;
+    color: #ff423a;
+    font-size: 16px;
+}
 
 
 
