Готовая страница администраторов ВУЗов

--- a/css/student_list.css
+++ b/css/student_list.css
@@ -1,5 +1,6 @@
 .studentList {
     border-collapse: separate;
+    margin-bottom: 20px;
 }
 .studentList th{
     background: linear-gradient(to top, #80aaff, #a3d3ff);
