--- a/css/head.css
+++ b/css/head.css
@@ -16,7 +16,8 @@
     margin: 20px;
     color: #FFFFFF;
     cursor: default;
-    font-size: 16px;
+    font-size: 17px;
+    text-shadow: 1px 1px 2px black;
 }
 .rightMenu {
     float: right;
