--- a/css/head.css
+++ b/css/head.css
@@ -10,6 +10,7 @@
     border-bottom: 1px solid #8e8e8e;
     background: linear-gradient(to top, #80aaff, #a3d3ff);
     box-shadow: 0px 1px 50px 0px #8e8e8e;
+    z-index: 10;
 }
 .leftMenu {
     float: left;
