--- a/css/main.css
+++ b/css/main.css
@@ -37,19 +37,30 @@ a {
 .userMenu{
     position: fixed;
     float: left;
-    width: 20%;
+    width: 18%;
+    margin-right: 1%;
+    margin-top: -90px;
+    padding-top: 90px;
+    height: 100%;
+    background-color: #f9f9f9;
+    box-shadow: inset 1px 0 7px 0px #909090;
 }
 .userMenu > a{
     text-decoration: none;
     margin: 15px;
-    color: black;
+    color: #7095df;
+    font-weight: bold;
     display: block;
+    border-bottom: 1px solid #e1e1e1;
+    padding-bottom: 7px;
+
 }
 .userMenu a:hover {
     color: #3547c3;
 }
 .userMenu > a.subMenu{
     margin-left: 30px;
+    font-weight: normal;
 }
 .content {
     width: 79%;
