--- a/css/promptEdit.css
+++ b/css/promptEdit.css
@@ -53,3 +53,9 @@
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+#adaptiveDisc {
+    color: gray;
+    font-weight: bold;
+    font-size: 15px;
+ margin-top: 7px;
+}
