--- a/css/add_student.css
+++ b/css/add_student.css
@@ -1,16 +1,24 @@
+.html.body {
+    margin-bottom: 50px;
+}
 .add_student {
     font-size: 16px;
     padding: 5px;
 }
 .left_label {
     font-size: 16px;
-    float: left;
-    width: 15em;
-    color: #487eb3;
     font-weight: bold;
+    color: #487eb3;
+    display: inline-block;
+    width: 16em;
+    vertical-align: top;
 }
-.label_input {
-    margin-bottom: 5px;
+.studentData {
+    font-size: 16px;
+    padding: 5px;
+    display: inline-block;
+}
+.fieldSt {
     margin-top: 5px;
 }
 .center {
