--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,9 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
+#error {
+    margin-top: 10px;
+    color: #f94538;
+    font-size: 16px;
+    font-weight: bold;
+}
