--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html,body {
     width: 100%;
     padding: 0;
     margin: 0;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Verdana, "Geneva CY", "DejaVu Sans", sans-serif;
     background-color: #f7f7f7;
 }
 .input {
