--- a/css/inputs.css
+++ b/css/inputs.css
@@ -1,31 +1,31 @@
 input, select{
-    width: 700px;
+    width: 95%;
     height: 40px;
     font-size: 13pt;
 }
 
 input[type=text]{
     border: none;
-    border-bottom: 5px solid lightgrey;
+    border-bottom: 2px solid lightgrey;
     border-radius: 0px;
     padding-left: 10px;
 }
 
 select.input{
     border: none;
-    border-bottom: 5px solid lightgrey;
+    border-bottom: 2px solid lightgrey;
     border-radius: 0px;
     padding-left: 10px;
 }
 
 input[type=text]:focus{
     border: none;
-    border-bottom: 5px solid #4385f3;
+    border-bottom: 2px solid #4385f3;
 }
 
 select.input:focus{
     border: none;
-    border-bottom: 5px solid #4385f3;
+    border-bottom: 2px solid #4385f3;
 }
 
 optgroup{
@@ -40,11 +40,24 @@ option{
     text-align: right;
     color: #365c84;
     display: inline-block;
-    width: 250px;
+    min-width: 250px;
+    width: 30%;
+    margin-top: 2%;
 }
 
+.blockInput {
+    width: 100%;
+    margin: auto;
+}
 .dataUser {
-    padding: 5px;
     display: inline-block;
+    text-align: right;
+    width: 64%;
+}
+.addOk {
+ margin-top: 2%;
 }
 
+.addCanc {
+    margin-top: 2%;
+}
