--- a/css/inputs.css
+++ b/css/inputs.css
@@ -4,7 +4,12 @@ input, select{
     font-size: 13pt;
 }
 
-input[type=text]{
+input[type=text],
+input[type=password],
+input[type=email],
+input[type=date],
+input[type=file],
+input[type=number]{
     border: none;
     border-bottom: 2px solid lightgrey;
     border-radius: 0px;
@@ -18,7 +23,12 @@ select.input{
     padding-left: 10px;
 }
 
-input[type=text]:focus{
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus,
+input[type=date]:focus,
+input[type=file]:focus,
+input[type=number]:focus{
     border: none;
     border-bottom: 2px solid #4385f3;
 }
@@ -34,6 +44,16 @@ optgroup{
 
 option{
     color: black;
+}
+
+input[type=checkbox]{
+    width: 20px;
+    height: auto;
+}
+
+input[type=radio]{
+    width: 20px;
+    height: auto;
 }
 
 .leftLabel {
@@ -60,4 +80,10 @@ option{
 
 .addCanc {
     margin-top: 2%;
+}
+
+#direction,
+#ce_direction,
+#an_direction{
+    height: auto;
 }
