--- a/css/student.css
+++ b/css/student.css
@@ -6,7 +6,7 @@
 .last {
     border-bottom: 1px solid #dadada;
 }
-.leftLabel {
+/*.leftLabel {
     font-size: 16px;
     font-weight: bold;
     color: #487eb3;
@@ -17,7 +17,7 @@
     font-size: 16px;
     padding: 5px;
     display: inline-block;
-}
+}*/
 .changeButton {
     margin-left: 7px;
     padding: 5px;
