Новые иконки, таблицы, диаграммы и метки

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -3,6 +3,11 @@ button{
     height: 40px;
 }
 
+input[type="submit"]{
+    width: 200px;
+    height: 40px;
+}
+
 .button{
     border-radius: 0px;
     border: none;
