--- a/css/auth.css
+++ b/css/auth.css
@@ -1,24 +1,38 @@
 body {
     height: 100%;
     width: 100%;
-    background-color: #4385f3;
     padding: 0;
     margin: 0;
     /*background-image: url(/images/background.png);
     background-repeat: no-repeat;
     background-position: right center;*/
+    background-image: url("/images/Braile.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: black;
     font-family: Verdana, "Geneva CY", "DejaVu Sans", sans-serif;
 }
+.shadow {
+    position: fixed;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+}
 .headerAuth {
-    width: 80%;
+    width: 100%;
     margin: auto;
     line-height: 1.5em;
     padding-top: 4%;
+    padding-bottom: 4%;
     color: white;
     font-weight: bold;
     font-size: 30px;
     text-align: center;
     text-shadow: 1px 1px 1px darkblue;
+
+    /*box-shadow: 0px -30px 30px -15px #4385f3 inset;*/
 }
 .out:before {
     content: '';
@@ -42,6 +56,12 @@ body {
     margin-bottom: 20px;
     width: 15em;
     background-color: white;
+    border: 0;
+    border-bottom: 3px solid grey;
+}
+.authInput:focus {
+    outline: none;
+    border-bottom: 3px solid #4385f3;
 }
 .authButton {
     font-size: 20px;
