--- a/css/direction.css
+++ b/css/direction.css
@@ -4,12 +4,12 @@
 }
 .nameUgsn {
     text-align: center;
-    background-color: #4385f3;
-    color: #ffffff;
+
+    color: #2a5397;
     font-size: 16px;
     padding: 7px;
-    border-top: 2px solid #365c84;
-    border-bottom: 2px solid lightgrey;
+
+    border-bottom: 1px solid lightgrey;
 }
 .codeDirection {
     display: inline;
@@ -21,7 +21,7 @@
 }
 
 .listItem:last-of-type {
-    margin-bottom: 5px;
+    margin-bottom: 45px;
 }
 
 .nameDirection {
